fixed spacing between content and h1

--- a/Public/stylesheets/style.css
+++ b/Public/stylesheets/style.css
@@ -21,7 +21,11 @@
 
 body {
   line-height: 1.75;
-  font-family: 'Roboto Flex', sans-serif;
+  font-family: "Roboto Flex", sans-serif;
+}
+
+h1 {
+  padding-bottom: 26px;
 }
 
 .flex-wrapper {
@@ -87,12 +91,12 @@ ul {
 }
 
 .list::before {
-  content: '➤';
+  content: "➤";
   position: absolute;
   left: 0;
 }
 
-.list:any-link{
+.list:any-link {
   color: rgba(0, 0, 0, 0.5);
 }
 
@@ -124,12 +128,14 @@ ul {
   background-color: rgba(0, 0, 0, 0.274);
 }
 
-
 /* Mobile View */
 @media only screen and (max-width: 600px) {
-
   body {
-    line-height: 1;
+    line-height: 1.25;
+  }
+
+  h1 {
+    padding-bottom: 13px;
   }
 
   .hero {
@@ -158,7 +164,10 @@ ul {
 
   .div-type-1 {
     background-color: rgb(245, 245, 245);
-    padding: 13px;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-top: 13px;
+    padding-bottom: 13px;
     margin-left: auto;
     margin-right: auto;
     min-height: 94vh;
@@ -182,14 +191,13 @@ ul {
   }
 
   .img-sm {
-    display:none !important;
+    display: none !important;
   }
 
   .img-md {
     padding-block: 20px;
   }
 }
-
 
 /* Full Screen */
 @media only screen and (min-width: 600px) {
@@ -198,7 +206,7 @@ ul {
     padding-right: 138px;
     padding-top: 150px;
     padding-bottom: 50px;
-    min-height: 40vh;
+    min-height: 45vh;
   }
 
   .div-type-1 {
@@ -248,7 +256,7 @@ ul {
 
 .pricingTable .pricingTable-header {
   color: #fff;
-  background: linear-gradient(to top right, #854BCC, #4C9FD0);
+  background: linear-gradient(to top right, #854bcc, #4c9fd0);
   padding: 25px 20px 80px;
   margin: 0 0 10px;
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%);
@@ -293,8 +301,8 @@ ul {
 }
 
 .pricingTable .pricing-content li:after {
-  content: '';
-  background: linear-gradient(to top right, #4bcc5c, #4C9FD0);
+  content: "";
+  background: linear-gradient(to top right, #4bcc5c, #4c9fd0);
   height: 2px;
   width: 100%;
   margin: 5px 0 0;
@@ -307,7 +315,7 @@ ul {
 }
 
 .pricingTable .pricingTable-signup {
-  background: linear-gradient(to top right, #854BCC, #4C9FD0);
+  background: linear-gradient(to top right, #854bcc, #4c9fd0);
   padding: 10px 10px 9px;
 }
 
@@ -328,13 +336,13 @@ ul {
 .pricingTable.pink .pricingTable-header,
 .pricingTable.pink .pricing-content li:after,
 .pricingTable.pink .pricingTable-signup {
-  background: linear-gradient(to top right, #e2c544, #F57875);
+  background: linear-gradient(to top right, #e2c544, #f57875);
 }
 
 .pricingTable.green .pricingTable-header,
 .pricingTable.green .pricing-content li:after,
 .pricingTable.green .pricingTable-signup {
-  background: linear-gradient(to top right, #4EEABA, #36A3CC);
+  background: linear-gradient(to top right, #4eeaba, #36a3cc);
 }
 
 @media only screen and (max-width: 600px) {
@@ -358,4 +366,3 @@ ul {
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
 }
-
